--- a/templates/security/register_user.html
+++ b/templates/security/register_user.html
@@ -18,6 +18,8 @@
             <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
                 <form action="{{ url_for_security('register') }}" method="POST" name="register_user_form">
                   {{ register_user_form.hidden_tag() }}
+                  {{ render_field(register_user_form.name, class="mdl-textfield__input") }}
+                  <br/>
                   {{ render_field(register_user_form.email, class="mdl-textfield__input") }}
                   <br/>
                   {{ render_field(register_user_form.password, class="mdl-textfield__input") }}
