--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('http://lorempixel.com/1000/1000/abstract/');
+  background-image: url('../img/bg.jpg');
   background-size: cover;
   background-attachment: fixed;
   /* FIXME: Temp. workaround for vertical scrollbars */
@@ -358,7 +358,7 @@ body .demo-blog {
   -webkit-align-items: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
-  padding: 32px;
+  padding: 10px;
   box-sizing: border-box;
 }
 .demo-blog--blogpost .comments > form {
@@ -583,4 +583,8 @@ body .demo-blog {
 	height: 64px;
 	border-radius: 32px;
 	margin: 8px 0;
+}
+
+.material-comments {
+	width: 90%;
 }
