--- a/templates/disqus.html
+++ b/templates/disqus.html
@@ -1,4 +1,4 @@
-<div class="comments">
+<div class="material-comments">
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
