ui changes on reset_password, send_confirmation - remove send_login html file

--- a/templates/security/reset_password.html
+++ b/templates/security/reset_password.html
@@ -1,16 +1,34 @@
+{% from "security/_macros.html" import render_field, render_button %}
 {% extends "base.html" %}
 
 {% block content %}
-
-{% from "security/_macros.html" import render_field_with_errors, render_field, render_button %}
-{% include "security/_messages.html" %}
-<h1>Reset password</h1>
-<form class="form-horizontal" role="form" action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
-  {{ reset_password_form.hidden_tag() }}
-  {{ render_field_with_errors(reset_password_form.password, class="form-control") }}
-  {{ render_field_with_errors(reset_password_form.password_confirm, class="form-control") }}
-  {{ render_button(reset_password_form.submit, class="btn btn-primary") }}
-</form>
-{% include "security/_menu.html" %}
-
+<main>
+    <div class="demo-blog__posts mdl-grid">
+        <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">
+            <div class="mdl-card__media mdl-color-text--grey-50">
+                <h3><img src="{{ theme_static('img/logo.png') }}"/> Admin - Reset Password</h3>
+            </div>
+            <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
+            {% if register_user_form.errors %}
+                {% for field, error in register_user_form.errors.items() %}
+                <p class="form-error">{{ error[0] }}</p>
+                {% endfor %}
+            {% endif %}
+            </div>
+            <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
+                <form class="form-horizontal" role="form" action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
+                  {{ reset_password_form.hidden_tag() }}
+                  {{ render_field(reset_password_form.password, class="mdl-textfield__input") }}
+                  <br/>
+                  {{ render_field(reset_password_form.password_confirm, class="mdl-textfield__input") }}
+                  <br/>
+                  {{ render_button(reset_password_form.submit, class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect") }}
+                </form>
+            </div>
+            <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
+            {% include "security/_menu.html" %}
+            </div>
+        </div>
+    </div>
+</main>
 {% endblock %}
