--- a/templates/content/tag_list.html
+++ b/templates/content/tag_list.html
@@ -1,4 +1,4 @@
-{% from theme('_helpers.html') import render_list, render_pagination with context %}
+{% from theme('_helpers.html') import render_list_item with context %}
 {% extends theme("base.html") %}
 
 {%block title%} Tag search | {{Config.get('site', 'site_name', 'Quokka site')}} {% endblock %}
@@ -10,19 +10,22 @@
 {% endblock %}
 
 {% block content %}
-<div class="pure-g-r" id="layout">
-    {% include theme('sidebar.html') %}
-    <div class="pure-u-1">
-        {{ menu.build_nodes(nodes=channels) }}
-        <div class="content">
-            <!-- A wrapper for all the blog posts -->
-            <h1 class="content-subhead">Contents with the tag "{{request.view_args.tag}}"</h1>
-            <div class="posts">
-                {{render_list(contents.items)}}
-                {{render_pagination(contents, request.path)}}
-                {% include theme('footer.html') %}
+<main class="mdl-layout__content">
+    <div class="demo-blog__posts mdl-grid">
+        <div class="mdl-card something-else mdl-cell mdl-cell--12-col mdl-cell--12-col-desktop">
+            <div class="mdl-card__media mdl-color--white mdl-color-text--grey-600">
+                <img src="{{theme_static('img/logo_black.png')}}">
+                {{Config.get('site', 'site_tagline', '<b>The Happiest CMS in the World!</b>')|safe}}
+                <h3>Contents with the tag "{{request.view_args.tag}}"</h3>
             </div>
         </div>
+        <!-- POSTS -->
+        {% for content in contents.items %}
+            {{render_list_item(content, css="mdl-cell--12-col")}}
+        {% endfor %}
+
     </div>
-</div>
+    <!-- Footer -->
+    {% include theme('footer.html') %}
+</main>
 {% endblock %}
