--- a/templates/authors/list.html
+++ b/templates/authors/list.html
@@ -18,12 +18,12 @@
                 {% for author in authors.items %}
                     <section class="post  pure-u-1-2 author-block">
                         <header class="post-header">
-                            <a href="{{url_for('authors.author', author_id=author.username)}}" title="See posts by {{ author.display_name }}">
+                            <a href="{{url_for('quokka.modules.authors.author', author_id=author.username)}}" title="See posts by {{ author.display_name }}">
                                 {% if author.email %}
                                     <img class="avatar" alt="{{ author.display_name }}" src="{{ author.get_avatar_url(size=120) }}">
                                 {% endif %}
                             </a>
-                            <h3><a class="post-title" href="{{url_for('authors.author', author_id=author.username)}}">{{ author.display_name }}</a></h3>
+                            <h3><a class="post-title" href="{{url_for('quokka.modules.authors.author', author_id=author.username)}}">{{ author.display_name }}</a></h3>
                                 <p class="post-meta">
                                   {{author.tagline|truncate(255)|safe()}}
                                 </p>
